update css, fix mobile version

--- a/1. Gallery/catskickmoon.html
+++ b/1. Gallery/catskickmoon.html
@@ -36,51 +36,53 @@
             <a href="https://www.youtube.com/watch?v=3PJCJjBqcEg"><i
                     class="fa-solid fa-video"></i> Video</a>
         </nav>
-        <section class="container">
-            <div class="section-title">Input Description</div>
-            <div class="collage-description">
-                <i>An athlete with a cat head plays volleyball using the moon on
-                    the beach.</i>
-            </div>
-        </section>
-        <section>
-            <div class="section-title">
-                Collaposer Output: Static Collage with Layered Assets (Manually Layout)
-            </div>
+        <div class="container">
+            <section>
+                <div class="section-title">Input Description</div>
+                <div class="collage-description">
+                    <i>An athlete with a cat head plays volleyball using the moon on
+                        the beach.</i>
+                </div>
+            </section>
+            <section>
+                <div class="section-title">
+                    Collaposer Output: Static Collage with Layered Assets (Manually Layout)
+                </div>
 
-            <div class="media">
-                <img src="./Collaposer Output/cats kick moon.png"
-                    alt="Collaposer Output">
-            </div>
-        </section>
-        <section>
-            <div class="section-title">
-                Advanced Editing
-            </div>
-            <div class="paragraph">
-                <ul style="list-style-type: none; padding-left: 0;">
-                    <li style="margin-bottom: 10px;"><i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i><span>Layer Sequence Adjustment</span>: The cat playing the guitar and the athlete's hat were brought to the front.</li>
-                    <li style="margin-bottom: 10px;"><i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i><span>Layout Adjustment</span>: We refine the size and position of the athletes and the moon to ensure they do not intersect during movement.</li>
-                    <li style="margin-bottom: 10px;"><i class="fa-solid fa-palette" style="margin-right: 10px;"></i><span>Visual Effect Adjustment</span>: To create a mysterious sci-fi atmosphere, we added textures to the beach and sky, and adjusted colors .</li>
-                    <li style="margin-bottom: 10px;"><i class="fa-solid fa-film" style="margin-right: 10px;"></i><span>Animation Design</span>: In this animated collage, we focus on articulated character animation. 
-                    A man on the right kicks the moon like a ball, demonstrating leg rotation. 
-                    The moon deforms upon impact and flies toward the man on the left. Simultaneously, the right man rotates 360 degrees due to the force. 
-                    The moon hits the left man's face, causing both to deform, and then the moon returns to the right. </li>
-                    <li><i class="fa-solid fa-gears" style="margin-right: 8px;"></i><span>Animation Production</span>:
-                    To support the kicking motion, the left athlete’s arm has been segmented, with the shoulder as the rotation center. 
-                    The right athlete’s arms, upper and lower legs, and feet have been fine-tuned, with each part segmented and assigned to the appropriate joints (shoulder, hip, knee, ankle). 
-                    The movements of the two athletes are realized through rotation and translation.</li>
-                </ul>
-            </div>
-        </section>
-        <section>
-            <div class="section-title">Final Video</div>
-            <video class="media" controls="controls"
-                poster="./posters/case1-cat-kick-moon.png">
-                <source src="./videos/case1-cat-kick-moon.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </section>
+                <div class="media">
+                    <img src="./Collaposer Output/cats kick moon.png"
+                        alt="Collaposer Output">
+                </div>
+            </section>
+            <section>
+                <div class="section-title">
+                    Advanced Editing
+                </div>
+                <div class="paragraph">
+                    <ul style="list-style-type: none; padding-left: 0;">
+                        <li style="margin-bottom: 10px;"><i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i><span>Layer Sequence Adjustment</span>: The cat playing the guitar and the athlete's hat were brought to the front.</li>
+                        <li style="margin-bottom: 10px;"><i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i><span>Layout Adjustment</span>: We refine the size and position of the athletes and the moon to ensure they do not intersect during movement.</li>
+                        <li style="margin-bottom: 10px;"><i class="fa-solid fa-palette" style="margin-right: 10px;"></i><span>Visual Effect Adjustment</span>: To create a mysterious sci-fi atmosphere, we added textures to the beach and sky, and adjusted colors .</li>
+                        <li style="margin-bottom: 10px;"><i class="fa-solid fa-film" style="margin-right: 10px;"></i><span>Animation Design</span>: In this animated collage, we focus on articulated character animation. 
+                        A man on the right kicks the moon like a ball, demonstrating leg rotation. 
+                        The moon deforms upon impact and flies toward the man on the left. Simultaneously, the right man rotates 360 degrees due to the force. 
+                        The moon hits the left man's face, causing both to deform, and then the moon returns to the right. </li>
+                        <li><i class="fa-solid fa-gears" style="margin-right: 8px;"></i><span>Animation Production</span>:
+                        To support the kicking motion, the left athlete’s arm has been segmented, with the shoulder as the rotation center. 
+                        The right athlete’s arms, upper and lower legs, and feet have been fine-tuned, with each part segmented and assigned to the appropriate joints (shoulder, hip, knee, ankle). 
+                        The movements of the two athletes are realized through rotation and translation.</li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <div class="section-title">Final Video</div>
+                <video class="media" controls="controls"
+                    poster="./posters/case1-cat-kick-moon.png">
+                    <source src="./videos/case1-cat-kick-moon.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </section>
+        </div>
         <footer>
             <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
         </footer>
