--- a/1. Gallery/moon.html
+++ b/1. Gallery/moon.html
@@ -42,53 +42,55 @@
         <a href="https://www.youtube.com/watch?v=3PJCJjBqcEg"><i
                 class="fa-solid fa-video"></i> Video</a>
     </nav>
-    <section class="container">
-        <div class="section-title">Description</div>
-        <div class="collage-description">
-            <i>In the space, athletes on planets are playing with moons as balls, while butterflies fly around.</i>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Collaposer Output: Static Collage with Layered Assets (Manually Layout)
-        </div>
+    <div class="container">
+        <section>
+            <div class="section-title">Description</div>
+            <div class="collage-description">
+                <i>In the space, athletes on planets are playing with moons as balls, while butterflies fly around.</i>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Collaposer Output: Static Collage with Layered Assets (Manually Layout)
+            </div>
 
-        <div class="text-center">
-            <img src="./Collaposer Output/planet.png" alt="Collaposer Output">
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Advanced Editing
-        </div>
-        <div class="paragraph">
-            <ul style="list-style-type: none; padding-left: 0;">
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
-                    <span>Layout Adjustment</span>: We added and cropped a space layer, tiling it as a starry background. We refined the size and position of the athletes, moons, and flowers to highlight the characters' actions.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
-                    <span>Visual Effect Adjustment</span>: We created a dazzling starry background using textures and colors, and added some twinkling star effects.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
-                    <span>Animation Design</span>: In this animated collage, we focus on character animation. On each planet, an athlete either swings at the moon like a badminton shuttle or bounces it like a ball. Each hit makes the moon orbit the planet, while butterflies float motionlessly and mysterious stars flicker in the background.
-                </li>
-                <li>
-                    <i class="fa-solid fa-gears" style="margin-right: 8px;"></i>
-                    <span>Animation Production</span>: The athletes’ torsos and legs have been separated to support crouching through deformation.
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">Final Video</div>
-        <video controls="controls" poster="./posters/case5_00000.png">
-            <source src="./videos/case5-planets.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </section>
+            <div class="text-center">
+                <img src="./Collaposer Output/planet.png" alt="Collaposer Output">
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Advanced Editing
+            </div>
+            <div class="paragraph">
+                <ul style="list-style-type: none; padding-left: 0;">
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
+                        <span>Layout Adjustment</span>: We added and cropped a space layer, tiling it as a starry background. We refined the size and position of the athletes, moons, and flowers to highlight the characters' actions.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
+                        <span>Visual Effect Adjustment</span>: We created a dazzling starry background using textures and colors, and added some twinkling star effects.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
+                        <span>Animation Design</span>: In this animated collage, we focus on character animation. On each planet, an athlete either swings at the moon like a badminton shuttle or bounces it like a ball. Each hit makes the moon orbit the planet, while butterflies float motionlessly and mysterious stars flicker in the background.
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-gears" style="margin-right: 8px;"></i>
+                        <span>Animation Production</span>: The athletes’ torsos and legs have been separated to support crouching through deformation.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">Final Video</div>
+            <video controls="controls" poster="./posters/case5_00000.png">
+                <source src="./videos/case5-planets.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+    </div>
     <footer>
         <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
     </footer>
