--- a/1. Gallery/uist25.html
+++ b/1. Gallery/uist25.html
@@ -6,13 +6,11 @@
     <meta name="robots" content="noindex">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 引入与 catskickmoon.html 相同的字体 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Kanchenjunga:wght@400;500;600;700&family=Kirang+Haerang&display=swap"
         rel="stylesheet">
-    <!-- 引入图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles case.css">
     <title>Case: UIST25</title>
@@ -41,56 +39,56 @@
         <a href="https://www.youtube.com/watch?v=3PJCJjBqcEg"><i
                 class="fa-solid fa-video"></i> Video</a>
     </nav>
-    <section class="container">
-        <div class="section-title">Input Description</div>
-        <div class="collage-description">
-            <i>A vintage botanical collage with hand-drawn flowers, leaves, and roots on aged paper. It includes
-                faded Latin names, antique labels, and soft earthy tones. Inspired by 19th-century plant journals,
-                it evokes a nostalgic, natural feel.</i>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Collaposer Output: Static Collage with Layered Assets (Manually Layout)
-        </div>
-        <div class="text-center">
-            <img src="./Collaposer Output/uist25.png" alt="Collaposer Output">
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Advanced Editing
-        </div>
-        <div class="paragraph">
-            <ul style="list-style-type: none; padding-left: 0;">
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i>
-                    <span>Layer Sequence Adjustment</span>: We added text between the butterfly cluster and other elements, moving the birds and sea lion in front of the text.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
-                    <span>Layout Adjustment</span>: We adjusted the position and scale of each layer to highlight the text information.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
-                    <span>Visual Effect Adjustment</span>: We applied visual adjustments by modifying the colors of clusters and adding various paper textures—especially to the backgrounds—to unify tones and enhance contrast between the characters and their surroundings.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
-                    <span>Animation Design and Production</span>: In this animated collage, butterflies serve as a visual transition. They flap outward from the center, revealing the poster underneath. In the final scene, two butterflies flap while a sea lion moves from the "B" to the "n" in "Busan" (stop-motion).
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">Final Video</div>
-        <video controls="controls" poster="./posters/case6-uist.png">
-            <source src="./videos/case6-uist.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-
-    </section>
-    <!-- 添加页脚 -->
+    <div class="container">
+        <section class="container">
+            <div class="section-title">Input Description</div>
+            <div class="collage-description">
+                <i>A vintage botanical collage with hand-drawn flowers, leaves, and roots on aged paper. It includes
+                    faded Latin names, antique labels, and soft earthy tones. Inspired by 19th-century plant journals,
+                    it evokes a nostalgic, natural feel.</i>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Collaposer Output: Static Collage with Layered Assets (Manually Layout)
+            </div>
+            <div class="text-center">
+                <img src="./Collaposer Output/uist25.png" alt="Collaposer Output">
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Advanced Editing
+            </div>
+            <div class="paragraph">
+                <ul style="list-style-type: none; padding-left: 0;">
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i>
+                        <span>Layer Sequence Adjustment</span>: We added text between the butterfly cluster and other elements, moving the birds and sea lion in front of the text.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
+                        <span>Layout Adjustment</span>: We adjusted the position and scale of each layer to highlight the text information.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
+                        <span>Visual Effect Adjustment</span>: We applied visual adjustments by modifying the colors of clusters and adding various paper textures—especially to the backgrounds—to unify tones and enhance contrast between the characters and their surroundings.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
+                        <span>Animation Design and Production</span>: In this animated collage, butterflies serve as a visual transition. They flap outward from the center, revealing the poster underneath. In the final scene, two butterflies flap while a sea lion moves from the "B" to the "n" in "Busan" (stop-motion).
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">Final Video</div>
+            <video controls="controls" poster="./posters/case6-uist.png">
+                <source src="./videos/case6-uist.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+    </div>
     <footer>
         <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
     </footer>
