--- a/1. Gallery/flower.html
+++ b/1. Gallery/flower.html
@@ -32,53 +32,55 @@
         <a href="#" class="gray-link"><i class="fa-solid fa-code"></i> Demo</a>
         <a href="https://www.youtube.com/watch?v=3PJCJjBqcEg"><i class="fa-solid fa-video"></i> Video</a>
     </nav>
-    <section class="container">
-        <div class="section-title">Input Description</div>
-        <div class="collage-description">
-            <i>A woman enjoys gardening, surrounded by flowers and butterflies, with mountains and trees in the background.</i>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Collaposer Output: Static Collage with Layered Assets (Manually Layout)
-        </div>
+    <div class="container">
+        <section>
+            <div class="section-title">Input Description</div>
+            <div class="collage-description">
+                <i>A woman enjoys gardening, surrounded by flowers and butterflies, with mountains and trees in the background.</i>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Collaposer Output: Static Collage with Layered Assets (Manually Layout)
+            </div>
 
-        <div class="media">
-            <img src="./Collaposer Output/woman flower.png" alt="Collaposer Output">
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Advanced Editing
-        </div>
-        <div class="paragraph">
-            <ul style="list-style-type: none; padding-left: 0;">
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i>
-                    <span>Layer Sequence Adjustment</span>: The butterfly above the woman's head was moved to the back, allowing it to appear from behind her. The blocked mountains were brought foward.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
-                    <span>Layout Adjustment</span>: We refined the size and position of the women and flowers to better fit the frame. Some flowers were copied and carefully arranged to cover the angular edges of the women's portraits.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
-                    <span>Visual Effect Adjustment</span>: To create a vintage style and achieve a more cohesive background, we added textures and adjusted the colors of the background cluster.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
-                    <span>Animation Design and Production</span>: We animated the plant and insect clusters. Butterflies flutter, bees buzz, and flowers sway or grow, while other elements remain static.
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">Final Video</div>
-        <video class="media" controls="controls" poster="./posters/case2-flower-woman.png">
-            <source src="./videos/case2-flower-woman.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </section>
+            <div class="media">
+                <img src="./Collaposer Output/woman flower.png" alt="Collaposer Output">
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Advanced Editing
+            </div>
+            <div class="paragraph">
+                <ul style="list-style-type: none; padding-left: 0;">
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i>
+                        <span>Layer Sequence Adjustment</span>: The butterfly above the woman's head was moved to the back, allowing it to appear from behind her. The blocked mountains were brought foward.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
+                        <span>Layout Adjustment</span>: We refined the size and position of the women and flowers to better fit the frame. Some flowers were copied and carefully arranged to cover the angular edges of the women's portraits.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
+                        <span>Visual Effect Adjustment</span>: To create a vintage style and achieve a more cohesive background, we added textures and adjusted the colors of the background cluster.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
+                        <span>Animation Design and Production</span>: We animated the plant and insect clusters. Butterflies flutter, bees buzz, and flowers sway or grow, while other elements remain static.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">Final Video</div>
+            <video class="media" controls="controls" poster="./posters/case2-flower-woman.png">
+                <source src="./videos/case2-flower-woman.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+    </div>
     <footer>
         <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
     </footer>
