--- a/1. Gallery/gaint.html
+++ b/1. Gallery/gaint.html
@@ -38,54 +38,56 @@
         <a href="#" class="gray-link"><i class="fa-solid fa-code"></i> Demo</a>
         <a href="https://www.youtube.com/watch?v=3PJCJjBqcEg"><i class="fa-solid fa-video"></i> Video</a>
     </nav>
-    <section class="container">
-        <div class="section-title">Input Description</div>
-        <div class="collage-description">
-            <i>A big cat is resting in a landscape under a blue sky with some clouds, featuring a huge moon. A man in white and red clothing is jumping on its back, while a woman is lying there as well. In the foreground, there are also some trees and plants.</i>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Collaposer Output: Static Collage with Layered Assets (Manually Layout)
-        </div>
+    <div class="container">
+        <section class="container">
+            <div class="section-title">Input Description</div>
+            <div class="collage-description">
+                <i>A big cat is resting in a landscape under a blue sky with some clouds, featuring a huge moon. A man in white and red clothing is jumping on its back, while a woman is lying there as well. In the foreground, there are also some trees and plants.</i>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Collaposer Output: Static Collage with Layered Assets (Manually Layout)
+            </div>
 
-        <div class="text-center">
-            <img src="./Collaposer Output/gaintcat.png" alt="Collaposer Output">
-        </div>
+            <div class="text-center">
+                <img src="./Collaposer Output/gaintcat.png" alt="Collaposer Output">
+            </div>
 
-    </section>
-    <section>
-        <div class="section-title">
-            Advanced Editing
-        </div>
-        <div class="paragraph">
-            <ul style="list-style-type: none; padding-left: 0;">
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
-                    <span>Layout Adjustment</span>: We cropped the sky layer and copied it to tile as a paper background.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
-                    <span>Visual Effect Adjustment</span>: We added paper textures to the sky and countryside layers and adjusted the background colors to highlight the foreground, making the entire piece resemble a physical collage.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
-                    <span>Animation Design</span>: We applied stop-motion effects to all non-character elements. Each layer enters the frame from outside using stop-motion. Once in position, the red man jumps on the cat, causing its back to sag and the blue man to fall off.
-                </li>
-                <li>
-                    <i class="fa-solid fa-gears" style="margin-right: 8px;"></i>
-                    <span>Animation Production</span>: To achieve the deformation during the red man's jump, we added puppet pins at his joints.
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">Final Video</div>
-        <video controls="controls" poster="./posters/case4-gaintcat-stopmotion.png">
-            <source src="./videos/case4-gaintcat.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </section>
+        </section>
+        <section>
+            <div class="section-title">
+                Advanced Editing
+            </div>
+            <div class="paragraph">
+                <ul style="list-style-type: none; padding-left: 0;">
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
+                        <span>Layout Adjustment</span>: We cropped the sky layer and copied it to tile as a paper background.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
+                        <span>Visual Effect Adjustment</span>: We added paper textures to the sky and countryside layers and adjusted the background colors to highlight the foreground, making the entire piece resemble a physical collage.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
+                        <span>Animation Design</span>: We applied stop-motion effects to all non-character elements. Each layer enters the frame from outside using stop-motion. Once in position, the red man jumps on the cat, causing its back to sag and the blue man to fall off.
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-gears" style="margin-right: 8px;"></i>
+                        <span>Animation Production</span>: To achieve the deformation during the red man's jump, we added puppet pins at his joints.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">Final Video</div>
+            <video controls="controls" poster="./posters/case4-gaintcat-stopmotion.png">
+                <source src="./videos/case4-gaintcat.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+    </div>
     <footer>
         <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
     </footer>
