--- a/1. Gallery/hawaii.html
+++ b/1. Gallery/hawaii.html
@@ -40,54 +40,54 @@
         <a href="https://www.youtube.com/watch?v=3PJCJjBqcEg"><i
                 class="fa-solid fa-video"></i> Video</a>
     </nav>
-    <section class="container">
-        <div class="section-title">Input Description</div>
-        <div class="collage-description">
-            <i>An Indian woman stands in front of a countryside house, with a sea or river behind it.</i>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Collaposer Output: Static Collage with Layered Assets (Manually Layout)
-        </div>
-
-        <div class="text-center">
-            <img src="./Collaposer Output/hawaii.png" alt="Collaposer Output">
-        </div>
-    </section>
-    <section>
-        <div class="section-title">
-            Advanced Editing
-        </div>
-        <div class="paragraph">
-            <ul style="list-style-type: none; padding-left: 0;">
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i>
-                    <span>Layer Sequence Adjustment</span>: We brought the blocked flower cluster to the front and removed the excess seal elements.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
-                    <span>Layout Adjustment</span>: We enlarged the house and tree clusters to create a more harmonious composition.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
-                    <span>Visual Effect Adjustment</span>: To create a suffocating atmosphere, we adjusted the colors of the sky and water, turning the plants black and white, while leaving one vibrant red flower for visual contrast. The boy and mother were given a paper texture, making them out of place in the environment.
-                </li>
-                <li style="margin-bottom: 10px;">
-                    <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
-                    <span>Animation Design and Production</span>: In this animated collage, we visualize wind. The ground and building clusters remain still, while the trees sway in sequence, clouds drift, a boy’s feathered headpiece flutters as he shakes his head, and a flower falls from his hands onto the beach.
-                </li>
-            </ul>
-        </div>
-    </section>
-    <section>
-        <div class="section-title">Final Video</div>
-        <video controls="controls" poster="./posters/case3-hawaii-local.png">
-            <source src="./videos/case3-hawaii-local.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    
-    </section>
+    <div class="container">
+        <section>
+            <div class="section-title">Input Description</div>
+            <div class="collage-description">
+                <i>An Indian woman stands in front of a countryside house, with a sea or river behind it.</i>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Collaposer Output: Static Collage with Layered Assets (Manually Layout)
+            </div>
+            <div class="text-center">
+                <img src="./Collaposer Output/hawaii.png" alt="Collaposer Output">
+            </div>
+        </section>
+        <section>
+            <div class="section-title">
+                Advanced Editing
+            </div>
+            <div class="paragraph">
+                <ul style="list-style-type: none; padding-left: 0;">
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-layer-group" style="margin-right: 10px;"></i>
+                        <span>Layer Sequence Adjustment</span>: We brought the blocked flower cluster to the front and removed the excess seal elements.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-arrows-up-down-left-right" style="margin-right: 10px;"></i>
+                        <span>Layout Adjustment</span>: We enlarged the house and tree clusters to create a more harmonious composition.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-palette" style="margin-right: 10px;"></i>
+                        <span>Visual Effect Adjustment</span>: To create a suffocating atmosphere, we adjusted the colors of the sky and water, turning the plants black and white, while leaving one vibrant red flower for visual contrast. The boy and mother were given a paper texture, making them out of place in the environment.
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        <i class="fa-solid fa-film" style="margin-right: 10px;"></i>
+                        <span>Animation Design and Production</span>: In this animated collage, we visualize wind. The ground and building clusters remain still, while the trees sway in sequence, clouds drift, a boy’s feathered headpiece flutters as he shakes his head, and a flower falls from his hands onto the beach.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="section-title">Final Video</div>
+            <video controls="controls" poster="./posters/case3-hawaii-local.png">
+                <source src="./videos/case3-hawaii-local.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+    </div>
     <footer>
         <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
     </footer>
