--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
                 <div class="note mobile-hide">* <span>Hover</span> the thumbnail to play animation on web.</div>
                 <div class="note">* <span>Click</span> the thumbnail to see details.</div>
                 <div class="collage-container">
+
                     <div class="collage-item">
                         <a href="./1. Gallery/catskickmoon.html"
                             target="_blank">
-                            <video loop muted>
+                            <video muted>
                                 <source
                                     src="./1. Gallery/videos/case1-cat-kick-moon.mp4"
                                     type="video/mp4">
