--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="collage-item">
                         <a href="./1. Gallery/catskickmoon.html"
                             target="_blank">
-                            <video muted>
+                            <video loop muted poster="./1. Gallery/catskickmoon.html">
                                 <source
                                     src="./1. Gallery/videos/case1-cat-kick-moon.mp4"
                                     type="video/mp4">
@@ -109,7 +109,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/uist25.html" target="_blank">
-                            <video loop muted>
+                            <video loop muted poster="./1. Gallery/uist25.html">
                                 <source
                                     src="./1. Gallery/videos/case6-uist.mp4"
                                     type="video/mp4">
