--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="collage-item">
                         <a href="./1. Gallery/catskickmoon.html"
                             target="_blank">
-                            <video loop muted poster="./1. Gallery/posters/case1-cat-kick-moon.png">
+                            <video loop muted poster="./1. Gallery/gif/case1-cat-kick.gif">
                                 <source
                                     src="./1. Gallery/videos/case1-cat-kick-moon.mp4"
                                     type="video/mp4">
