--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/uist25.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/posters/case2-flower-woman.png">
+                            <video loop muted poster="./1. Gallery/gif/case6-uist.gif">
                                 <source
                                     src="./1. Gallery/videos/case6-uist.mp4"
                                     type="video/mp4">
@@ -120,7 +120,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/gaint.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/posters/case4-gaintcat-stopmotion.png">
+                            <video loop muted poster="./1. Gallery/gif/case4-gaintcat.gif">
                                 <source
                                     src="./1. Gallery/videos/case4-gaintcat.mp4"
                                     type="video/mp4">
@@ -131,7 +131,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/flower.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/posters/case2-flower-woman.png">
+                            <video loop muted poster="./1. Gallery/gif/case2-flower-woman.gif">
                                 <source
                                     src="./1. Gallery/videos/case2-flower-woman.mp4"
                                     type="video/mp4">
@@ -142,7 +142,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/moon.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/posters/case5_moon.png">
+                            <video loop muted poster="./1. Gallery/gif/case5-planets.gif">
                                 <source
                                     src="./1. Gallery/videos/case5-planets.mp4"
                                     type="video/mp4">
@@ -153,7 +153,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/hawaii.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/posters/case3-hawaii-local.png">
+                            <video loop muted poster="./1. Gallery/gif/case3-hawaii-local.gif">
                                 <source
                                     src="./1. Gallery/videos/case3-hawaii-local.mp4"
                                     type="video/mp4">
