--- a/index.html
+++ b/index.html
@@ -174,6 +174,19 @@
                     Collaposer outperforms baselines across all dimensions, demonstrating its ability to select diverse visual elements that align with the story and effectively present them for collage creation. In contrast, Ablated-Select shows the weakest asset-story consistency, often failing to provide relevant elements and occasionally including unrelated ones. Ablated-Present delivers the least satisfactory presentation results, though it has a relatively smaller impact on system usability. The distribution, mean value (Mean), and standard deviation (SD) of the subjective ratings in the post-study questionnaire based on a 7-point Likert scale (1: strongly disagree, 4: neutral, 7: strongly agree).
                 </paragraph>
             </section>
+
+            <section>
+                <div class="section-title">Usage Scenario Video</div>
+                <div class="video-container">
+                    <iframe 
+                        src="https://www.youtube.com/embed/3PJCJjBqcEg?rel=0" 
+                        title="Collaposer Usage Scenario Video" 
+                        frameborder="0" 
+                        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </section>
         </div>
         <footer>
             <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
