--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="collage-item">
                         <a href="./1. Gallery/catskickmoon.html"
                             target="_blank">
-                            <video loop muted poster="./1. Gallery/gif/case1-cat-kick-moon.gif">
+                            <video autoplay loop muted>
                                 <source
                                     src="./1. Gallery/videos/case1-cat-kick-moon.mp4"
                                     type="video/mp4">
@@ -108,10 +108,10 @@
                     </div>
 
                     <div class="collage-item">
-                        <a href="./1. Gallery/uist25.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/gif/case6-uist.gif">
+                        <a href="./1. Gallery/chi26.html" target="_blank">
+                            <video autoplay loop muted>
                                 <source
-                                    src="./1. Gallery/videos/case6-uist.mp4"
+                                    src="./1. Gallery/videos/case6-chi26.mp4"
                                     type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
@@ -120,7 +120,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/gaint.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/gif/case4-gaintcat.gif">
+                            <video autoplay loop muted>
                                 <source
                                     src="./1. Gallery/videos/case4-gaintcat.mp4"
                                     type="video/mp4">
@@ -131,7 +131,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/flower.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/gif/case2-flower-woman.gif">
+                            <video autoplay loop muted>
                                 <source
                                     src="./1. Gallery/videos/case2-flower-woman.mp4"
                                     type="video/mp4">
@@ -142,7 +142,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/moon.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/gif/case5-planets.gif">
+                            <video autoplay loop muted>
                                 <source
                                     src="./1. Gallery/videos/case5-planets.mp4"
                                     type="video/mp4">
@@ -153,7 +153,7 @@
 
                     <div class="collage-item">
                         <a href="./1. Gallery/hawaii.html" target="_blank">
-                            <video loop muted poster="./1. Gallery/gif/case3-hawaii-local.gif">
+                            <video autoplay loop muted>
                                 <source
                                     src="./1. Gallery/videos/case3-hawaii-local.mp4"
                                     type="video/mp4">
