--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <header>
             <div class="title">Collaposer: Transforming Photo Collections into
                 Visual Assets for Storytelling with Collages</div>
-            <div class="subtitle">Anonymous Author(s)</div>
+            <div class="subtitle"><strong>Jiayi Zhou</strong>, Liwenhan Xie, Jiaju Ma, Zheng Wei,
+                                    Huamin Qu, Anyi Rao</div>
         </header>
         <nav>
             <a href="#" class="gray-link"><i class="fa-solid fa-file-pdf"></i> Paper</a>
@@ -189,7 +190,7 @@
             </section>
         </div>
         <footer>
-            <p>&copy; 2025 Jiayi Zhou. All rights reserved.</p>
+            <p>&copy; 2026 Jiayi Zhou. All rights reserved.</p>
         </footer>
         <script>
         const collageItems = document.querySelectorAll('.collage-item');
