--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Our evaluation shows that Collaposer effectively automates the preparation proce
 
                     <div class="collage-item">
                         <a href="./1. Gallery/chi26.html" target="_blank">
-                            <video autoplay loop muted>
+                            <video autoplay loop muted poster="./1. Gallery/gif/case6-uist.gif">
                                 <source
                                     src="./1. Gallery/videos/case6-chi26.mp4"
                                     type="video/mp4">
